--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mkyong.hashing</groupId>
   <artifactId>java-project</artifactId>
   <packaging>jar</packaging>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>java-project</name>
   <url>http://maven.apache.org</url>
   <properties>
